--- a/mandatory_1/main.tex
+++ b/mandatory_1/main.tex
@@ -101,8 +101,8 @@
 \tableofcontents
 
 \begin{abstract}
-    This document contains my solutions to the exercises for the course MEK4250--Finite Elements in Computational Mechanics, taught at the University of Oslo in the spring of 2025.
-    The code for everything, as well as this document, can be found at my GitHub repository: \url{https://github.com/augustfe/MEK4250}.
+    This document contains my solution to the first mandatory exercise for the course MEK4250--Finite Elements in Computational Mechanics, taught at the University of Oslo in the spring of 2025.
+    The code for everything, as well as this document, can be found at my GitHub repository \url{https://github.com/augustfe/MEK4250}, under the \texttt{mandatory\_1} directory.
 \end{abstract}
 
 \include{exercises}
