--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,6 +6,8 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage{tikz}
+\usetikzlibrary{calc}
+
 \usepackage{caption}
 \usepackage{subcaption}
 % \geometry{margin=1in}
@@ -20,6 +22,7 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black},
 }
+\usepackage[capitalise]{cleveref}
 
 \colorlet{myred}{red!20}
 \colorlet{myblue}{blue!20}
